test/asm/format-truncation.err
error: format-truncation.asm(9):
    Fractional width 260 too long, limiting to 255
error: format-truncation.asm(15):
    Fractional width 260 too long, limiting to 255
Assembly aborted with 2 errors!
